<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".p_a_208">
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/radioGroup">

        <RadioButton
            android:id="@+id/radiop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkbutton"
            android:text="@string/present"
            android:textSize="24sp"
            android:textStyle="bold"
            />

        <RadioButton
            android:id="@+id/radioa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkbutton"
            android:text="@string/absent"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkbutton"
            android:text="@string/sick"
            android:textSize="24sp"
            android:textStyle="bold" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonsa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="145dp"
        android:layout_marginEnd="151dp"
        android:layout_marginBottom="143dp"
        android:background="@drawable/roundedbutton"
        android:elevation="3.5dp"
        android:text="@string/submit"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="149dp"
        android:text="@string/studentid"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextID"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="-10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_student_id"
        android:inputType="textPersonName|number"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:hint="Select Date"
        android:textSize="30sp" />


</RelativeLayout>